<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PocketMoneyManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_income">AddAmountActivity</string>
    <string name="title_activity_expence">Expence</string>
    <string name="title_activity_income">Income</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="category">Add New Category</string>
    <string name="expence">Add Expense</string>
    <string name="income">Add Amount</string>
    <string name="view">Show Expenses</string>
    <string name="borrow">Add Borrow</string>
    <string name="Msg">Send Message</string>
    <string name="initial">0.00</string>
    <string name="symbol">syb</string>
    <string name="title_activity_currency_list">CurrencyList</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <string name="title_activity_view_expense">ViewExpenseActivity</string>
    <string name="title_activity_view_single_expense">ViewSingleExpenseActivity</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="title_activity_select_category">SelectCategoryActivity</string>
    <string name="title_activity_select_icon">SelectIconActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add__borrow">Add_Borrow</string>
    <string name="title_activity_send__msg">Send_Msg</string>

</resources>